--- a/src/index.css
+++ b/src/index.css
@@ -199,20 +199,6 @@ h3,
   display: none;
 }
 
-/* Form Group (Label + Input) */
-.form-group {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 16px;
-}
-
-/* Labels */
-.form-label {
-  font-size: var(--small-font-size);
-  margin-bottom: 6px;
-  color: #333;
-}
-
 /* Input, Select, Textarea */
 .form-input,
 select,
@@ -233,46 +219,6 @@ textarea:focus {
   outline: none;
 }
 
-/* Checkbox & Radio */
-.form-checkbox,
-.form-radio {
-  display: flex;
-  align-items: flex-start;
-  gap: 8px;
-  cursor: pointer;
-}
-
-.form-checkbox span {
-  margin-bottom: 0;
-}
-
-.checkbox-input,
-.radio-input {
-  width: 16px;
-  height: 16px;
-  accent-color: #007bff;
-}
-
-input,
-textarea,
-select {
-  font-family: "Poppins", Helvetica, Arial, sans-serif;
-}
-
-/* Hide the Clock Icon from Input Type [Time] */
-input[type="time"]::-webkit-calendar-picker-indicator {
-  display: none;
-}
-
-input[type="time"]::-moz-focus-inner {
-  border: 0;
-}
-
-input[type="time"]::-ms-clear,
-input[type="time"]::-ms-reveal {
-  display: none;
-}
-
 /* Toast Classes */
 .Toastify__toast {
   font-family: "Poppins", Helvetica, Arial, sans-serif !important;
@@ -282,23 +228,6 @@ input[type="time"]::-ms-reveal {
 }
 .Toastify__toast-theme--colored.Toastify__toast--error {
   background-color: var(--toast-danger) !important;
-}
-
-.input-wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-}
-/* Error Message */
-.form-error {
-  color: #d9534f;
-  font-size: 12px;
-  margin-top: 4px;
-}
-
-.input-error {
-  border-color: var(--danger-color);
-  color: var(--danger-color);
 }
 
 /* Header Classes */
@@ -319,100 +248,6 @@ input[type="time"]::-ms-reveal {
   font-weight: 600;
 }
 
-/* Tab CSS */
-.nav-tab-wrapper {
-  border-bottom: 1px solid var(--muted-background);
-  margin-bottom: 1rem;
-  width: 100%;
-  display: flex;
-  overflow-x: auto;
-  gap: 0.5rem;
-  min-height: max-content;
-}
-
-.tab-link {
-  text-decoration: none;
-  font-size: var(--normal-font-size);
-  font-weight: 500;
-  color: var(--dark-color);
-  min-width: max-content;
-  width: auto;
-  max-width: max-content;
-  padding: 0.5rem 0.8rem;
-  cursor: pointer;
-}
-
-.active-tab-link {
-  color: var(--primary-color);
-  border-bottom: 2px solid var(--primary-color);
-}
-
-.color-picker-wrapper {
-  display: flex;
-  gap: 0.5rem;
-  align-items: center;
-  margin-bottom: 0.5rem;
-}
-
-.color-picker-wrapper .color-item {
-  width: 28px;
-  height: 28px;
-  border-radius: 50%;
-  border: 2px solid var(--secondary-color);
-  cursor: pointer;
-  transition: all 0.2s ease;
-}
-
-.color-picker-wrapper .color-item.active {
-  border: 2px solid var(--primary-color);
-}
-
-.color-input-wrapper {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-  margin: 0.5rem 0;
-  background: var(--secondary-color);
-  padding: 6px 12px;
-  border-radius: 8px;
-  width: max-content;
-}
-
-.color-preview {
-  position: relative;
-  width: 28px;
-  height: 28px;
-  border-radius: 6px;
-  border: 1px solid #ccc;
-  cursor: pointer;
-}
-
-.color-box {
-  position: absolute;
-  inset: 0;
-  border-radius: 6px;
-}
-
-.color-input {
-  position: absolute;
-  inset: 0;
-  opacity: 0;
-  cursor: pointer;
-}
-
-.color-input-text {
-  font-size: var(--small-font-size);
-  color: var(--dark-color);
-}
-
-/* Public Landing CSS */
-.landing_container {
-  width: 100vw;
-  height: 100vh;
-  background-color: var(--background-color);
-  overflow-y: auto;
-}
-
 .landing_heading,
 .landing_sub-heading {
   font-weight: 500;
@@ -426,27 +261,6 @@ input[type="time"]::-ms-reveal {
 
 .landing_paragraph {
   color: var(--dark-color);
-}
-
-.unordered-list {
-  display: flex;
-  gap: 1rem;
-  flex-direction: column;
-  color: var(--dark-color);
-}
-
-.landing_sub-wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  margin-bottom: 5rem;
-}
-
-.terms-section {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-  margin-bottom: 0.5rem;
 }
 
 /* Error Page */
@@ -464,12 +278,8 @@ input[type="time"]::-ms-reveal {
   text-decoration: none;
 }
 
-.landing_margin {
-  width: 85% !important;
-  margin: auto;
-}
-
-input {
+input,
+textarea {
   color: var(--semi-dark-color);
   background-color: var(--white-color);
 }
@@ -479,9 +289,8 @@ input {
   .landing_heading {
     font-size: 1.5rem;
   }
+}
 
-  /* Setting Page */
-  .setting-form-wrapper {
-    max-width: 90%;
-  }
+* {
+  color: black;
 }
