--- a/src/components/css/aside.css
+++ b/src/components/css/aside.css
@@ -14,24 +14,15 @@
 
 .nav-link {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 0.1rem;
-  padding: 0.5rem 0.4rem;
+  padding: 0.5rem;
+  background-color: var(--background-color);
   text-decoration: none;
   position: relative;
   outline: none;
   border-radius: 10px;
-}
-
-.nav-link .nav-title {
-  color: var(--semi-dark-color);
-  font-weight: 500;
-  font-size: x-small;
-  text-align: center;
-  text-decoration: none;
-  word-wrap: break-word;
 }
 
 .nav-link .nav-icon {
@@ -44,7 +35,7 @@
 .nav-link:hover,
 .active-link,
 .active-link .nav-title {
-  background-color: var(--secondary-color);
+  background-color: var(--muted-background);
   color: var(--primary-color);
 }
 
