--- a/src/components/css/dashboard.css
+++ b/src/components/css/dashboard.css
@@ -219,3 +219,9 @@
   height: 300px;
   position: relative;
 }
+
+.dashboard-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
